Changed bg color of team page, will fix spacing. Made Nav bar consistent

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,10 +72,10 @@
     margin: 10px;
 }
 .center{
-   
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+    background-color: #090627;
+    /* margin: auto; */
+    /* width: 100vw; */
+    padding: 30px;
     
   }
 #center{
@@ -94,7 +94,7 @@
 }
 
 #aboutCDS {
-    padding: 20px 0px 20px 0px;
+    padding: 20px 0px 20px 30px;
 }
 .media > img {
     width: 100px;
